--- a/registration form.html
+++ b/registration form.html
@@ -15,11 +15,14 @@
     <label>Phone Number:</label>
     <input type="number"><br>
     <label>Gender:</label><br>
-    <input type="radio">
+    <input type="radio">Male</input><br>
+    <input type="radio">Female</input><br>
     <label>Pasword:</label>
     <input type="password"><br>
     <label>Confirm Pasword:</label>
     <input type="password"><br>
+    <input type="submit"><br>
+
 </form>
 
 
