--- a/registration form.html
+++ b/registration form.html
@@ -17,6 +17,8 @@
     <label>Gender:</label><br>
     <input type="radio">Male</input><br>
     <input type="radio">Female</input><br>
+    <label>Date of Birth:</label>
+    <input type="date"><br>
     <label>Pasword:</label>
     <input type="password"><br>
     <label>Confirm Pasword:</label>
