--- a/registration form.html
+++ b/registration form.html
@@ -24,6 +24,7 @@
     <label>Confirm Pasword:</label>
     <input type="password"><br>
     <input type="submit"><br>
+    <input type="submit"><br>
 
 </form>
 
