First Form Demo

--- a/registration form.html
+++ b/registration form.html
@@ -15,8 +15,18 @@
     <label>Phone Number:</label>
     <input type="number"><br>
     <label>Gender:</label><br>
-    <input type="radio">Male</input><br>
-    <input type="radio">Female</input><br>
+    <input type="radio">Male<br>
+    <input type="radio">Female<br>
+    <label>Prefered Workplace:</label><br>
+    <input type="checkbox">At Office <br>
+    <input type="checkbox">At Home <br>
+    <label>Preffered Device:</label> <br>
+    <select name="device" id="device"><br>
+    <option >MAC</option>
+    <option>PC</option>
+    <option>Laptop</option>
+    <option>Phone</option>
+    </select> <br>
     <label>Date of Birth:</label>
     <input type="date"><br>
     <label>Pasword:</label>
