--- a/registration form.html
+++ b/registration form.html
@@ -33,7 +33,10 @@
     <input type="password"><br>
     <label>Confirm Pasword:</label>
     <input type="password"><br>
-    <input type="submit"><br>
+    <label>Upload Image:</label>
+    <input type="file"> <br>
+    <input type="submit">
+    <input type="reset"><br>
 
 </form>
 
