--- a/Task 2/task2.8.html
+++ b/Task 2/task2.8.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <title>Document</title>
     <style>
         td{
@@ -44,19 +42,42 @@
             </td>
         </tr>
         <tr>
-
-
-
-
+            <td>Date of Birth</td>
+            <td><Input type="date"></Input></td>
+            <td></td>
         </tr>
-
-
-
-
-
-
-
-
+        <tr>
+            <td>Blood Group</td>
+            <td><select name="Blood Group" id="Blood group">
+                <option >A+</option>
+                <option>A-</option>
+                <option>B+</option>
+                <option>B-</option>
+                <option>O+</option>
+                <option>O-</option>
+                <option>AB+</option>
+                <option>AB-</option>
+            </select></td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Degree</td>
+            <td><input type="checkbox">SSC
+                <input type="checkbox">HSC
+                <input type="checkbox">BSc.
+                <input type="checkbox">MSc.
+            </td>
+            <td></td>
+        </tr>
+        <tr>
+            <td>Photo</td>
+            <td><input type="file"></td>
+        </tr>
+        <tr></tr>
+        <tr>
+            <td style="align right"><input type="submit">
+                <input type="reset"><br></td>
+        </tr>
 
     </table>
 </form>
